gitops/auth/ingress-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: togglemaster-ingress
  namespace: auth-namespace # Ele pode ficar aqui, mas precisa de permissão ou cross-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:    
        paths:
          # Evaluation Service
          - path: /evaluation/?(.*)
            pathType: Prefix
            backend:
              service:
                # Usamos o DNS interno completo para atravessar Namespaces
                name: evaluation-service.evaluation-namespace.svc.cluster.local
                port:
                  number: 8004
          # Analytics Service
          - path: /analytics/?(.*)
            pathType: Prefix
            backend:
              service:
                name: analytics-service.analytics-namespace.svc.cluster.local
                port:
                  number: 8005
